--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -93,6 +93,9 @@ on boot
     chown system system /sys/class/leds/red/device/blink
     chown system system /sys/class/leds/infrared/transmit
 
+    chmod 0660 /proc/gesture/onoff
+    chown system system /proc/gesture/onoff
+
     chmod 0660 /dev/ttyHS2
     chown bluetooth bluetooth /dev/ttyHS2
 
