--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -1,8 +1,8 @@
 #Uncommenting these urls would only enable
 #the power up auto injection and force injection(test case).
-#XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
-#XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
-#XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
+XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
+XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
+XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
 
 #Version check for XTRA
 #DISABLE = 0
@@ -16,8 +16,15 @@ XTRA_VERSION_CHECK=0
 # _CLEAR = 0
 ERR_ESTIMATE=0
 
+#OPTIMIZED FOR EUROPE
+NTP_SERVER=0.europe.pool.ntp.org
+NTP_SERVER=1.europe.pool.ntp.org
+NTP_SERVER=2.europe.pool.ntp.org
+NTP_SERVER=3.europe.pool.ntp.org
+NTP_SERVER=0.es.pool.ntp.org
+
 #Test
-NTP_SERVER=time.gpsonextra.net
+#NTP_SERVER=time.gpsonextra.net
 #Asia
 # NTP_SERVER=asia.pool.ntp.org
 #Europe
@@ -28,7 +35,7 @@ NTP_SERVER=time.gpsonextra.net
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 3
+DEBUG_LEVEL = 0
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
@@ -99,7 +106,7 @@ SUPL_PORT=7276
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 2
+LPP_PROFILE = 1
 
 ################################
 # EXTRA SETTINGS
